@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #475569
}
skinparam interface {
  BackgroundColor #EFF6FF
  BorderColor #2563EB
}
title SimpleRAG - Command 模式（Swing 后台任务）
left to right direction

class DesktopWorkspaceController <<Invoker Client>> {
  -tasks : BackgroundTaskCoordinator
  -searchTask : TaskHandle
  -highlightTask : TaskHandle
  -askTask : TaskHandle
  -performSearch() : void
  -rebuildIndex() : void
  -askQuestion() : void
}

class BackgroundTaskCoordinator <<Invoker / Executor>> {
  +submit(identity, command, progress, success, failure, discarded) : TaskHandle
  -identityMatches(captured, current) : boolean
  -rootCause(failure) : Throwable
}

interface "BackgroundCommand<R, P>" as BackgroundCommand <<Command>> {
  +run(publish : Consumer<P>) : R
}

interface TaskHandle <<Cancellation Handle>> {
  +cancel() : void
  +isDone() : boolean
}

class "Search task (lambda)" as SearchCommand <<Concrete Command>> {
  +run(publish) : List<SearchResultView>
}

class SearchController <<Receiver>> {
  +search(identity, query, limit, extension) : List<SearchResultView>
}

class "SwingWorker<R, P>" as SwingWorker <<Async Executor>> {
  #doInBackground() : R
  #process(chunks : List<P>) : void
  #done() : void
  +execute() : void
  +cancel(mayInterrupt) : boolean
}

DesktopWorkspaceController --> BackgroundTaskCoordinator : submit(command, callbacks)
DesktopWorkspaceController ..> SearchCommand : creates as lambda
SearchCommand ..|> BackgroundCommand
SearchCommand --> SearchController : invokes receiver
BackgroundTaskCoordinator --> BackgroundCommand : executes
BackgroundTaskCoordinator ..> SwingWorker : creates
BackgroundTaskCoordinator ..> TaskHandle : returns anonymous handle
SwingWorker ..> BackgroundCommand : run(publish)
TaskHandle ..> SwingWorker : cancel / status

note bottom of SearchCommand
  The concrete command is an anonymous lambda in
  DesktopWorkspaceController rather than a named Java class.
end note
@enduml
